# amaranth-examples

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
amaranth_examples/: comb_test.py  connectors.py  counter.py  custom_board.py  ddr.py  instance.py  pll_ecp5.py  pll_ice40.py  spi_oversampled.py
nmigen_examples/: comb_test.py  connectors.py  counter.py  custom_board.py  instance.py  pll_ecp5.py  pll_ice40.py
